# torch-rnnlib

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PATENTS  README.md  doc.lua
doc/: cell.md  modelutils.md  modules.md  rnnlib.md
examples/sentence-classification/: get_data.lua  models.lua  sentiment.lua
examples/sentence-classification/scripts/: data.sh
examples/utils/: data.lua
examples/word-language-model/: generate.lua  get_data.lua  word_lm.lua
rnnlib/: RecurrentTable.lua  SequenceTable.lua  bidirectional.lua  cell.lua  cudnnutils.lua  env.lua  init.lua  make.lua  mutils.lua  recurrentnetwork.lua
rnnlib/nn/: GRU.lua  LSTM.lua  RNN.lua  RecurrentTable.lua  ReverseTable.lua  SequenceTable.lua  WrappedCudnnRnn.lua  ZipTable.lua
rocks/: rnnlib-0.1-1.rockspec
test/: test_cudnn.lua  test_sequence.lua
